[package]
name = "openssh-keys"
version = "0.6.0"
edition = "2021"
rust-version = "1.58.0"
authors = ["Stephen Demos <stephen@demos.zone>"]
description = "read and write OpenSSH public keys"
documentation = "https://docs.rs/openssh-keys"
homepage = "https://github.com/coreos/openssh-keys"
repository = "https://github.com/coreos/openssh-keys"
readme = "README.md"
keywords = ["ssh", "ssh-keys", "keys", "rsa", "openssh"]
license = "MIT OR Apache-2.0"
exclude = [".github", ".gitignore", "examples", "fixtures"]

[dependencies]
# Private dependencies.
base64 = "0.21"
byteorder = "1.1"
md-5 = ">= 0.9, < 0.11"
sha2 = ">= 0.9, < 0.11"
thiserror = "1.0"
# Public dependencies, exposed through library API.
# <none>

[dev-dependencies]
home = "~0.5"

[package.metadata.release]
publish = false
push = false
pre-release-commit-message = "cargo: openssh-keys release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "openssh-keys {{version}}"
