[package]
name = "openssh-keys"
version = "0.6.4"
edition = "2021"
rust-version = "1.75.0"
authors = ["Stephen Demos <stephen@demos.zone>"]
description = "read and write OpenSSH public keys"
documentation = "https://docs.rs/openssh-keys"
homepage = "https://github.com/coreos/openssh-keys"
repository = "https://github.com/coreos/openssh-keys"
readme = "README.md"
keywords = ["ssh", "ssh-keys", "keys", "rsa", "openssh"]
license = "MIT OR Apache-2.0"
exclude = [".github", ".gitignore", "examples", "fixtures"]

[features]
default = ["std"]
std = ["base64/std", "byteorder/std", "md-5/std", "sha2/std", "thiserror/std"]

[dependencies]
# Private dependencies.
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
byteorder = { version = "1.1", default-features = false }
# Do not use a range on the crates md-5 or sha2. RustCrypto crate
# versions cannot be mixed and matched. Doing so will cause hard
# to understand build failures. Read about it at
# https://github.com/coreos/openssh-keys/issues/89
md-5 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0", default-features = false }
# Public dependencies, exposed through library API.
# <none>

[dev-dependencies]
home = "=0.5.9"

[package.metadata.release]
publish = false
push = false
pre-release-commit-message = "cargo: openssh-keys release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "openssh-keys {{version}}"
